...
        children: [
          Expanded(
            child: BlocConsumer<DemandaBloc, DemandaState>(
              listener: (context, state) {
                switch (state) {
                  case DemandaCreateState():
                    showBlocSnackbar(context, "Bolo adicionado com sucesso");
                  case DemandaDeleteState():
                    showBlocSnackbar(context, "Bolo removido com sucesso!");
                  case DemandaUpdateState():
                    showBlocSnackbar(context, "Bolo atualizado com sucesso!");
                  case DemandaLoadingState():
                    break;
...
            begin: Alignment.centerLeft,
            end: Alignment.centerRight,
          ),
          borderRadius: BorderRadius.circular(22),
        ),
        child: ElevatedButton(
          key: Key('adicionarDemandaButton'),
          onPressed: () {
            addInfoDemand(context);
          },
          style: ElevatedButton.styleFrom(
            backgroundColor: Colors.transparent,
            shadowColor: Colors.transparent,
...
                                  color: AppColors.gradientDarkBlue,
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold),
                            ),
                            Expanded(
                              child: InputTextField(
                                key: Key('codigoDemandaInput'),
                                labelText: "",
                                hintText: "Código da demanda",
                                controller: _codigoController,
                              ),
                            ),
                          ],
...
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold),
                            ),
                            const SizedBox(width: 10),
                            Expanded(
                              child: InputTextField(
                                key: Key('nomeDemandaInput'),
                                hintText: "Nome da demanda",
                                controller: _nomeController,
                                labelText: '',
                              ),
                            ),
                          ],
...
                                  color: AppColors.gradientDarkBlue,
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold),
                            ),
                            const SizedBox(width: 10),
                            Expanded(
                              key: Key('dataPedidoInput'),
                              child: inputDate(_dataController),
                            ),
                          ],
                        ),
                        const SizedBox(height: 20),
                        Row(
...
                                  color: AppColors.gradientDarkBlue,
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold),
                            ),
                            const SizedBox(width: 10),
                            Expanded(
                              key: Key('prazoInput'),
                              child: inputDate(_prazoController),
                            ),
                          ],
                        ),
                        const SizedBox(height: 20),
                      ],
...
                              ),
                            ),
                          ],
                        ),
                        const SizedBox(height: 10),
                        InputTextField(
                          key: Key('descricaoDemandaInput'),
                          labelText: "Descrição",
                          hintText: "Digite a descrição",
                          controller: _descricaoController,
                          maxLines: 3,
                        ),
                      ],
                    ),
                  ),
                  const SizedBox(height: 20),
                  ElevatedButton(
                    key: Key('concluirButton'),
                    onPressed: () async {
                      if (_codigoController.text.isNotEmpty ||
                          _nomeController.text.isNotEmpty) {
                        bloc.add(DemandaCreate(
                          nomeDemanda: _nomeController.text,
                          codigo: _codigoController.text,
...
