...
import 'package:catavento/shared/widgets/menu.dart';

import 'package:flutter/material.dart';
import 'package:flutter_bloc/flutter_bloc.dart';

class DashboardProdutos extends StatelessWidget {
  const DashboardProdutos({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('DashboardProdutos'),
      drawer: Navbar(),
...

  Widget _buildListProdutos(BuildContext context) {
    return BlocConsumer<ProdutoBloc, ProdutoState>(
      listener: (context, state) {
        switch (state) {
          case ProdutoCreateState():
            showBlocSnackbar(context, "Produto adicionado com sucesso");
          case ProdutoDeleteState():
            showBlocSnackbar(context, "Produto delatado com sucesso");
          case ProdutoUpdateState():
            showBlocSnackbar(context, "Produto atualizado com sucesso");
          case ProdutoLoadingState():
            break;
          case ProdutoFilterState():
            break;
          case ProdutoErrorState():
            showBlocSnackbar(context, state.message);
...
          end: Alignment.centerRight,
        ),
        borderRadius:
            BorderRadius.circular(MediaQuery.of(context).size.height * 0.022),
      ),
      child: ElevatedButton(
        key: Key('adicionarProdutoButton'),
        onPressed: () {
          _showAdicionarDialog(context);
        },
        style: ElevatedButton.styleFrom(
          backgroundColor: Colors.transparent,
          shadowColor: Colors.transparent,
...
                                        fontWeight: FontWeight.bold),
                                  ),
                                ),
                                const SizedBox(width: 10),
                                Expanded(
                                  child: InputTextField(
                                    key: Key('InputCodigoProduto'),
                                    hintText: "Digite o código...",
                                    labelText: '',
                                    controller: codigoController,
                                  ),
                                ),
                              ],
...
                                        fontWeight: FontWeight.bold),
                                  ),
                                ),
                                const SizedBox(width: 10),
                                Expanded(
                                  child: InputTextField(
                                    key: Key('InputNomeProduto'),
                                    hintText: "Digite o nome...",
                                    labelText: '',
                                    controller: nomeController,
                                  ),
                                ),
                              ],
...
                            const SizedBox(height: 10),
                            Row(
                              crossAxisAlignment: CrossAxisAlignment.center,
                              children: [
                                Expanded(
                                  child: InputTextField(
                                    key: Key('InputDescricaoProduto'),
                                    hintText: "Digite a descrição...",
                                    labelText: 'Descrição',
                                    maxLines: 4,
                                    controller: descricaoController,
                                  ),
                                ),
...
                                  shadowColor: Colors.transparent,
                                  shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(22),
                                  ),
                                ),
                                child: const Text(
                                  "Concluir",
                                  style: TextStyle(
                                    color: Colors.white,
                                  ),
                                ),
                              ),
                            ),
...
