...
            begin: Alignment.centerLeft,
            end: Alignment.centerRight),
        borderRadius:
            BorderRadius.circular(MediaQuery.of(context).size.height * 0.03),
      ),
      child: ElevatedButton(
        key: Key('EditarProdutoButton'),
        onPressed: () {
          _showEditDialog(
              context, nomeController, codigoController, descricaoController);
        },
        style: ElevatedButton.styleFrom(
            backgroundColor: Colors.transparent,
...
