...
import 'package:flutter/material.dart';
import 'package:flutter_bloc/flutter_bloc.dart';

class DashboardDesempenhoAdmin extends StatelessWidget {
  final TextEditingController _setorcontroller = TextEditingController();

  DashboardDesempenhoAdmin({super.key});

  // final List<Map<String, String>> funcionarios = [
  //   {'nomeFuncionario': 'nomeFuncionario', 'setor': 'Montagem'},
  //   {'nomeFuncionario': 'nomeFuncionario', 'setor': 'Montagem'},
  //   {'nomeFuncionario': 'nomeFuncionario', 'setor': 'Montagem'},
  //   {'nomeFuncionario': 'nomeFuncionario', 'setor': 'Montagem'},
...
